make the error display larger and make sure the spinner can't get stuck forever

--- a/monitor/css/monitor.scss
+++ b/monitor/css/monitor.scss
@@ -369,6 +369,10 @@ h1 {
 	height : 3em;
 }
 
+.error .message {
+	font-size: 2em;
+}
+
 @keyframes resize-title {
     0% { transform : scale(0.5) translateY(-50%); }
    10% { transform : scale(2) translateY(-50%); }
